--- a/src/locales/ru/products.json
+++ b/src/locales/ru/products.json
@@ -4,6 +4,8 @@
         "Apply": "Применить",
         "Search": "Поиск",
         "Clear": "Очистить",
+        "More": "Больше",
+        "Less": "Меньше",
         "AddModel": "Добавить модель"
     },
     "Common": {
