feat: tasks notification tab

--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -40,7 +40,12 @@
             "Title": "Документы"
         },
         "Notifications": {
-            "Title": "Уведомления"
+            "Title": "Уведомления",
+            "Date": "Дата",
+            "Topic": "Тема",
+            "TemplateName": "Название шаблона",
+            "Recipient": "Получатель",
+            "Text": "Текст"
         }
     }
 }
