feat: dashboard keyuser and qe

--- a/src/locales/ru/dashboard.json
+++ b/src/locales/ru/dashboard.json
@@ -1,6 +1,7 @@
 {
-    "Title": "To do",
+    "Title": "Dashboard",
     "List": {
+        "Title": "To do",
         "ReChecking": "Повторная проверка",
         "QualifyingTasksLaunch": "Квалификационные задачи к запуску",
         "TransferDocuments": "Трансфер документов",
