QCMS-161 Dashboard - Task Card

--- a/src/locales/ru/dashboard.json
+++ b/src/locales/ru/dashboard.json
@@ -1,6 +1,15 @@
 {
-    "Title": "To do",
+    "Title": "Dashboard",
+    "TaskCard": {
+        "AllTasks": "Все задачи",
+        "OverdueTasks": "Просроченные задачи",
+        "NewTasks": "Новые задачи",
+        "DocUpdates": "Обновление документации",
+        "Rejected": "Отклоненные",
+        "ReCheck": "Повторная проверка"
+    },
     "List": {
+        "Title": "To do",
         "ReChecking": "Повторная проверка",
         "QualifyingTasksLaunch": "Квалификационные задачи к запуску",
         "TransferDocuments": "Трансфер документов",
