update model list

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -110,12 +110,12 @@
             "qualityModel": "Модель качества",
             "QE": "QE",
             "withoutPlan": "Без утвержденного мастерплана",
-            "riskByProductUsageNegative": "Риск нанесения ущерба здоровью потребителя при неадекватном использовании товара",
-            "riskByProductUsagePositive": "Риск нанесения ущерба здоровью потребителя при адекватном использовании товара",
-            "riskEnvironment": "Риск нанесения ущерба окружающей среде",
-            "riskProperty": "Риск нанесения ущерба для имущества",
+            "riskByProductUsageNegative": "Риск ущерба здоровью при неадекватном применении",
+            "riskByProductUsagePositive": "Риск ущерба здоровью при адекватном применении",
+            "riskEnvironment": "Риск ущерба окружающей среде",
+            "riskProperty": "Риск ущерба имущества",
             "riskLegal": "Законодательный риск",
-            "riskHealth": "Риск для здоровья потребителя",
+            "riskHealth": "Риск для здоровья",
             "risk": "Риск",
             "latestChanges": "Изменено за последние (дней)",
             "isVerificationRequired": "Требуется проверка",
