update model details

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -2,6 +2,7 @@
     "Title": "Модели качества",
     "Buttons": {
         "Apply": "Применить",
+        "Edit": "Редактировать",
         "Search": "Поиск",
         "Clear": "Очистить",
         "More": "Больше",
@@ -38,7 +39,9 @@
         "RiskLevel": {
             "Title": "Уровень риска",
             "Field": {
-                "unurgent": "Не очень важный"
+                "minor": "Не очень важный",
+                "major": "Важный",
+                "critical": "Критический"
             }
         },
         "Description": {
