--- a/src/locales/ru/products.json
+++ b/src/locales/ru/products.json
@@ -67,7 +67,9 @@
                     "fromProject": "Из проекта"
                 },
                 "RiskOptions": {
-                    "minor": "Не очень важный"
+                    "minor": "Не очень важный",
+                    "major": "Важный",
+                    "critical": "Критический"
                 }
             }
         },
