QCMS-172 models and master plan edit features

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -1,9 +1,12 @@
 {
     "Title": "Модели качества",
     "Buttons": {
+        "Add": "Добавить",
         "Apply": "Применить",
         "Edit": "Редактировать",
+        "Delete": "Удалить",
         "Search": "Поиск",
+        "Save": "Сохранить",
         "Clear": "Очистить",
         "More": "Больше",
         "Less": "Меньше",
