QCMS-173 style fixes

--- a/src/locales/ru/providers.json
+++ b/src/locales/ru/providers.json
@@ -82,7 +82,7 @@
             "providerCode": "Код поставщика",
             "INN": "ИНН",
             "businessLicenseNumber": "Номер бизнес лицензии",
-            "platform": "Платформа ответственная за самооценку",
+            "platform": "Платформа, ответственная за самооценку",
             "qualityAssessment": "Оценка по качеству",
             "databasePotentialSuppliers": "База данных потенциальных поставщиков",
             "referenceDatabaseSuppliers": "Ссылочная база данных поставщиков",
@@ -90,7 +90,7 @@
             "reference": "Ссылка",
             "billingCountry": "Страна выставления счетов",
             "countryLocationSupplier": "Страна расположения отделения поставщика",
-            "SQMResponsibleSelfAssessment": "SQM ответственный за самооценку",
+            "SQMResponsibleSelfAssessment": "SQM, ответственный за самооценку",
             "qualityManager": "Менеджер по качеству, мониторинг производства",
             "country": "Страна",
             "assessmentQualityTechnicalAudit": "Оценка по качеству технического аудита",
