feat: task details

--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -107,6 +107,14 @@
             "Reject": "Отклонить",
             "Approve": "Согласовать"
         },
+        "Actions": {
+            "chooseActionLabel": "Действия",
+            "chooseActionPlaceholder": "Выберите",
+            "applyAction": "Выполнить",
+            "actions": {
+                "updateStatusDocuments": "Обновить статус документа"
+            }
+        },
         "Documents": {
             "Title": "Документы",
             "AwaitedDocuments": {
