--- a/src/locales/ru/products.json
+++ b/src/locales/ru/products.json
@@ -101,6 +101,7 @@
             "chooseActionPlaceholder": "Выберите",
             "applyAction": "Выполнить",
             "actions": {
+                "sendQualityStatusMessage": "Выполнить запрос в дефиницию",
                 "addComment": "Добавить комментарий",
                 "addTasks": "Добавить задачи",
                 "addDocument": "Добавление документа",
