--- a/src/locales/ru/files.json
+++ b/src/locales/ru/files.json
@@ -1,6 +1,7 @@
 {
     "Title": "Перенесите сюда файлы, чтобы загрузить",
     "Button": "Выберите файлы",
+    "Drop": "Отпустите сюда файлы, чтобы загрузить",
     "Format": "Допустимые форматы: xls, csv",
     "Size": "Максимальный размер одного файла 500 Мб"
 }
