QCMS-173 tasks actions

--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -3,8 +3,10 @@
         "Apply": "Применить",
         "Search": "Поиск",
         "Clear": "Очистить",
+        "Cancel": "Отменить",
         "More": "Больше",
         "Less": "Меньше",
+        "Save": "Сохранить",
         "AddModel": "Добавить модель",
         "SelectAll": "Выбрать все"
     },
