QCMS-172 update master plans

--- a/src/locales/ru/models.json
+++ b/src/locales/ru/models.json
@@ -69,13 +69,13 @@
                 }
             },
             "Section": {
-                "Developer": {
+                "MANUFACTURER": {
                     "Title": "Статус поставщика: Производитель"
                 },
-                "Importer": {
+                "IMPORTER": {
                     "Title": "Статус поставщика: Импортер"
                 },
-                "Exporter": {
+                "DISTRIBUTOR": {
                     "Title": "Статус поставщика: Дистрибьютер"
                 }
             },
